Add: AttributeTest into Experimental Module

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -481,15 +481,19 @@
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\IA.SDK\IA.SDK\IA.SDK.csproj">
+    <ProjectReference Include="..\..\Meru\Meru.Commands\Meru.Commands.csproj">
+      <Project>{c733b761-b55f-4272-b03a-c4cc49257ef6}</Project>
+      <Name>Meru.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Meru\Meru.SDK\Meru.SDK.csproj">
       <Project>{b8ffa60f-2c45-449f-ad4d-cf1c5a3075d4}</Project>
-      <Name>IA.SDK</Name>
+      <Name>Meru.SDK</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\IA\IA\IA.csproj">
+    <ProjectReference Include="..\..\Meru\Meru\Meru.csproj">
       <Project>{e4b74dd1-8ccb-4fcc-9bde-0f79c43211e7}</Project>
-      <Name>IA</Name>
+      <Name>Meru</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\IA\RestClient\RestClient.csproj">
+    <ProjectReference Include="..\..\Meru\RestClient\RestClient.csproj">
       <Project>{48155a63-8e59-4042-8130-7ad40315b8a9}</Project>
       <Name>RestClient</Name>
     </ProjectReference>
