--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
-  <package id="Discord.Net" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.Commands" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.Core" version="1.0.0-rc3-00746" targetFramework="net461" />
+  <package id="Discord.Net" version="1.0.1" targetFramework="net461" />
+  <package id="Discord.Net.Commands" version="1.0.1" targetFramework="net461" />
+  <package id="Discord.Net.Core" version="1.0.1" targetFramework="net461" />
   <package id="Discord.Net.Providers.WS4Net" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.Rest" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.Rpc" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.Webhook" version="1.0.0-rc3-00746" targetFramework="net461" />
-  <package id="Discord.Net.WebSocket" version="1.0.0-rc3-00746" targetFramework="net461" />
+  <package id="Discord.Net.Rest" version="1.0.1" targetFramework="net461" />
+  <package id="Discord.Net.Rpc" version="1.0.1" targetFramework="net461" />
+  <package id="Discord.Net.Webhook" version="1.0.1" targetFramework="net461" />
+  <package id="Discord.Net.WebSocket" version="1.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Google.Apis" version="1.20.0" targetFramework="net461" />
   <package id="Google.Apis.Auth" version="1.18.0" targetFramework="net461" />
