--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -32,6 +32,7 @@
   <package id="MySql.ConnectorNET.Entity" version="6.8.3.2" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net461" />
+  <package id="ncalc" version="1.3.8" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
