--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -161,9 +161,15 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.1.0.0, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <HintPath>..\packages\protobuf-net.2.1.0\lib\net451\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net46\RestSharp.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="SteamKit2, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SteamKit2.2.0.0-Alpha6\lib\net46\SteamKit2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -315,6 +321,8 @@
     <Compile Include="API\Patreon\PatreonApi.cs" />
     <Compile Include="API\Patreon\Objects\PatreonPledge.cs" />
     <Compile Include="API\Reminder\ReminderAPI.cs" />
+    <Compile Include="API\Steam\Objects\SteamApiUser.cs" />
+    <Compile Include="API\Steam\SteamApi.cs" />
     <Compile Include="API\Urban Dictionary\UrbanDictionaryApi.cs" />
     <Compile Include="Languages\ar-AE.Designer.cs" />
     <Compile Include="Languages\cz-CZ.Designer.cs" />
@@ -472,6 +480,7 @@
     <Compile Include="Modules\RocketLeagueModule.cs" />
     <Compile Include="Modules\ServerCountModule.cs" />
     <Compile Include="Modules\SettingsModule.cs" />
+    <Compile Include="Modules\SteamModule.cs" />
     <Compile Include="Modules\WelcomeMessages.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeagueOptions.cs" />
@@ -483,16 +492,13 @@
     <Compile Include="API\Rocket League\Objects\RocketLeagueStats.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeagueTier.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeagueUser.cs" />
-    <Compile Include="Objects\OverwatchUserCompetitive.cs" />
-    <Compile Include="Objects\OverwatchUserData.cs" />
-    <Compile Include="Objects\OverwatchUserGames.cs" />
-    <Compile Include="Objects\OverwatchUserPlaytime.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Modules\AccountsModule.cs" />
     <Compile Include="Modules\AdminModule.cs" />
     <Compile Include="Modules\DeveloperModule.cs" />
     <Compile Include="Modules\FunModule.cs" />
     <Compile Include="Modules\PastaModule.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Objects\CatImage.cs" />
     <Compile Include="Objects\Posts.cs" />
     <Compile Include="Objects\Imgur\ImgurImage.cs" />
@@ -647,6 +653,9 @@
     <EmbeddedResource Include="Migrations\201707170136413_add-rep.resx">
       <DependentUpon>201707170136413_add-rep.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="API\Steam\Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
