--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -34,7 +34,9 @@
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="SteamKit2" version="2.0.0-Alpha6" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
