--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -91,6 +91,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework6.Npgsql, Version=3.1.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework6.Npgsql.3.1.1\lib\net45\EntityFramework6.Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="Google.Apis, Version=1.20.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.1.20.0\lib\net45\Google.Apis.dll</HintPath>
       <Private>True</Private>
@@ -163,6 +166,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql, Version=3.2.5.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.3.2.5\lib\net451\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net46\RestSharp.dll</HintPath>
@@ -281,6 +287,9 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -318,6 +327,7 @@
     <Compile Include="API\Patreon\PatreonApi.cs" />
     <Compile Include="API\Patreon\Objects\PatreonPledge.cs" />
     <Compile Include="API\Reminder\ReminderAPI.cs" />
+    <Compile Include="API\StringComparison\StringComparer.cs" />
     <Compile Include="API\Urban Dictionary\UrbanDictionaryApi.cs" />
     <Compile Include="Languages\ar-AE.Designer.cs" />
     <Compile Include="Languages\cz-CZ.Designer.cs" />
@@ -445,6 +455,14 @@
     <Compile Include="Migrations\201707170136413_add-rep.Designer.cs">
       <DependentUpon>201707170136413_add-rep.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708030141215_sqlserver-to-postgres.cs" />
+    <Compile Include="Migrations\201708030141215_sqlserver-to-postgres.Designer.cs">
+      <DependentUpon>201708030141215_sqlserver-to-postgres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708030201584_Fix-LocalExp.cs" />
+    <Compile Include="Migrations\201708030201584_Fix-LocalExp.Designer.cs">
+      <DependentUpon>201708030201584_Fix-LocalExp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Objects\ApiKeysModel.cs" />
     <Compile Include="Models\Objects\Guild\Timer.cs" />
@@ -465,6 +483,8 @@
     <Compile Include="Models\Objects\Global\Setting.cs" />
     <Compile Include="Models\Objects\User\User.cs" />
     <Compile Include="Models\Objects\Global\VoteCount.cs" />
+    <Compile Include="Modules\Accounts\Services\AchievementsService.cs" />
+    <Compile Include="Modules\Accounts\Services\ExperienceTrackerService.cs" />
     <Compile Include="Modules\ActionsModule.cs" />
     <Compile Include="Modules\DonatorModule.cs" />
     <Compile Include="Modules\GamesModule.cs" />
@@ -500,7 +520,7 @@
     <Compile Include="API\Rocket League\Objects\RocketLeagueTier.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeagueUser.cs" />
     <Compile Include="Global.cs" />
-    <Compile Include="Modules\AccountsModule.cs" />
+    <Compile Include="Modules\Accounts\AccountsModule.cs" />
     <Compile Include="Modules\AdminModule.cs" />
     <Compile Include="Modules\DeveloperModule.cs" />
     <Compile Include="Modules\FunModule.cs" />
@@ -658,6 +678,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707170136413_add-rep.resx">
       <DependentUpon>201707170136413_add-rep.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708030141215_sqlserver-to-postgres.resx">
+      <DependentUpon>201708030141215_sqlserver-to-postgres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708030201584_Fix-LocalExp.resx">
+      <DependentUpon>201708030201584_Fix-LocalExp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
