--- a/Miki/App.config
+++ b/Miki/App.config
@@ -81,16 +81,25 @@
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.9.9.0" newVersion="6.9.9.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.5.0" newVersion="3.2.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
+<system.data>
+  <DbProviderFactories>
+    <remove invariant="Npgsql" />
+    <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
+  </DbProviderFactories>
+</system.data>
  <entityFramework>
-      <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-      <providers>
-        <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
+    </providers>
   </entityFramework>
-<connectionStrings>
- <add name="Entities" connectionString="metadata=res://*/Models.Miki.csdl|res://*/Models.Miki.ssdl|res://*/Models.Miki.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLEXPRESS;initial catalog=Miki;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
- <add name="Miki.Properties.Settings.ConnectionString" connectionString="Data Source=(local)\SQLEXPRESS;Integrated Security=True" providerName="System.Data.SqlClient" />
-</connectionStrings></configuration>
+  <connectionStrings>
+        <add name="PostgreSql" connectionString="server=localhost;user id=postgres;password=mikiPass.1;database=Miki" providerName="Npgsql" />
+  </connectionStrings>
+</configuration>
