Refactor: multiple modules

--- a/Miki/App.config
+++ b/Miki/App.config
@@ -85,6 +85,10 @@
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.5.0" newVersion="3.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EFCache" publicKeyToken="46c4868af4307d2c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <system.data>
@@ -100,6 +104,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-        <add name="PostgreSql" connectionString="server=localhost;user id=postgres;password=mikiPass.1;database=Miki" providerName="Npgsql" />
+    <add name="PostgreSql" connectionString="server=localhost;user id=postgres;password=mikiPass.1;database=Mikiupd" providerName="Npgsql" />
+    <add name="Redis" connectionString="hostname:6379" />
   </connectionStrings>
 </configuration>
