--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -9,7 +9,9 @@
   <package id="Discord.Net.Rpc" version="1.0.2-build-00800" targetFramework="net461" />
   <package id="Discord.Net.Webhook" version="1.0.2-build-00800" targetFramework="net461" />
   <package id="Discord.Net.WebSocket" version="1.0.2-build-00800" targetFramework="net461" />
+  <package id="EFCache.Redis" version="2016.5.24.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework.Cache" version="1.1.0" targetFramework="net461" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net461" />
   <package id="Google.Apis" version="1.20.0" targetFramework="net461" />
   <package id="Google.Apis.Auth" version="1.18.0" targetFramework="net461" />
@@ -36,8 +38,12 @@
   <package id="ncalc" version="1.3.8" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
+  <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="Npgsql" version="3.2.5" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="SharpRaven" version="2.2.0" targetFramework="net461" />
+  <package id="StackExchange.Redis" version="1.1.603" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
