Add: sentry.io support

--- a/Miki/App.config
+++ b/Miki/App.config
@@ -97,14 +97,14 @@
     <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
   </DbProviderFactories>
 </system.data>
- <entityFramework>
+ <entityFramework codeConfigurationType="Miki.Migrations.Configuration, Miki">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PostgreSql" connectionString="server=localhost;user id=postgres;password=mikiPass.1;database=Mikiupd" providerName="Npgsql" />
-    <add name="Redis" connectionString="hostname:6379" />
+    <add name="PostgreSql" connectionString="server=localhost;user id=postgres;password=mikiPass.1;database=Miki" providerName="Npgsql" />
+    <add name="Redis" connectionString="localhost:6379"/>
   </connectionStrings>
 </configuration>
