--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -523,7 +523,7 @@
     <Compile Include="Modules\Accounts\Services\ExperienceTrackerService.cs" />
     <Compile Include="Modules\ActionsModule.cs" />
     <Compile Include="Modules\DonatorModule.cs" />
-    <Compile Include="Modules\GamesModule.cs" />
+    <Compile Include="Modules\Gambling\GamesModule.cs" />
     <Compile Include="Modules\GeneralModule.cs" />
     <Compile Include="Modules\GuildAccountsModule.cs" />
     <Compile Include="Modules\NsfwModule.cs" />
